anivision/src/ani-parser/grammar.output
State 454 conflicts: 1 shift/reduce
State 455 conflicts: 1 shift/reduce


Grammar

    0 $accept: STARTEXPR $end

    1 literal: "[integer]"
    2        | "[scalar]"
    3        | "[string]"

    4 identifier: "[identifier]"

    5 name_notabs: identifier
    6            | identifier "::" name

    7 name: name_notabs
    8     | "::" name_notabs

    9 builtin_name_raw: "this"

   10 builtin_name: builtin_name_raw

   11 vector: '<' expr_list_ne '>'

   12 array_expr_list: expr_list_ne
   13                | ',' expr_list_ne
   14                | expr_list_ne ','
   15                | ',' expr_list_ne ','

   16 array: '{' array_expr_list '}'
   17      | '{' '.' '}'

   18 primary_expr: literal
   19             | vector
   20             | array
   21             | name
   22             | builtin_name
   23             | '(' expr ')'
   24             | "NULL"

   25 postfix_expr: primary_expr
   26             | postfix_expr '[' expr ']'
   27             | postfix_expr '[' error ']'
   28             | postfix_expr '(' fcall_expr_list ')'
   29             | postfix_expr '(' error ')'
   30             | pod_type_name '(' expr ')'
   31             | postfix_expr '.' name
   32             | postfix_expr '.' builtin_name
   33             | postfix_expr "->" name
   34             | postfix_expr "->" builtin_name
   35             | postfix_expr "++"
   36             | postfix_expr "--"

   37 unary_op: '+'
   38         | '-'
   39         | '!'

   40 new_array_spec: type_name '[' expr ']'
   41               | new_array_spec bracket_bracket
   42               | new_array_spec '[' expr ']'
   43               | new_array_spec '[' error ']'

   44 unary_expr: postfix_expr
   45           | "++" unary_expr
   46           | "--" unary_expr
   47           | unary_op unary_expr
   48           | "new" name '(' fcall_expr_list ')'
   49           | "new" new_array_spec
   50           | "delete" unary_expr

   51 binary_expr: unary_expr
   52            | binary_expr '^' binary_expr
   53            | binary_expr '*' binary_expr
   54            | binary_expr '/' binary_expr
   55            | binary_expr '%' binary_expr
   56            | binary_expr '+' binary_expr
   57            | binary_expr '-' binary_expr
   58            | binary_expr '<' binary_expr
   59            | '(' binary_expr '>' binary_expr ')'
   60            | binary_expr "> " binary_expr
   61            | binary_expr "<=" binary_expr
   62            | binary_expr ">=" binary_expr
   63            | binary_expr "==" binary_expr
   64            | binary_expr "!=" binary_expr
   65            | binary_expr "&&" binary_expr
   66            | binary_expr "||" binary_expr

   67 cond_expr: binary_expr
   68          | binary_expr '?' expr ':' cond_expr
   69          | binary_expr '?' ':' cond_expr

   70 range_expr: cond_expr
   71           | cond_expr ".." cond_expr
   72           | ".." cond_expr
   73           | cond_expr ".."

   74 expr: range_expr

   75 expr_list_ne: expr
   76             | expr_list_ne ',' expr
   77             | error ',' expr
   78             | expr_list_ne ',' error ',' expr

   79 fcall_expr_list_ent: initializer
   80                    | name '=' initializer

   81 fcall_expr_list_ne: fcall_expr_list_ent
   82                   | fcall_expr_list_ne ',' fcall_expr_list_ent
   83                   | error ',' expr
   84                   | fcall_expr_list_ne ',' error ',' fcall_expr_list_ent

   85 fcall_expr_list: /* empty */
   86                | fcall_expr_list_ne

   87 pod_type_name: "int"
   88              | "scalar"
   89              | "range"
   90              | "vector"
   91              | "vector" '<' expr '>'
   92              | "matrix"
   93              | "matrix" '<' expr ',' expr '>'
   94              | "string"

   95 type_name: pod_type_name
   96          | name
   97          | "anyobj"

   98 bracket_bracket: '[' ']'

   99 array_spec: bracket_bracket
  100           | array_spec bracket_bracket

  101 initializer: expr
  102            | '{' '}'

  103 declarator_noinit: name_notabs
  104                  | declarator_noinit '[' expr ']'
  105                  | declarator_noinit '[' error ']'
  106                  | declarator_noinit '[' ']'

  107 declarator: declarator_noinit
  108           | declarator_noinit '=' initializer

  109 declarator_list_ne: declarator
  110                   | declarator_list_ne ',' declarator
  111                   | error ',' declarator
  112                   | declarator_list_ne ',' error ',' declarator

  113 decl_stmt_nonstatic: type_name declarator_list_ne ';'
  114                    | "const" type_name declarator_list_ne ';'

  115 decl_stmt: decl_stmt_nonstatic
  116          | "static" decl_stmt_nonstatic

  117 compound_stmt: '{' statement_list '}'
  118              | '{' error '}'

  119 selection_stmt: "if" '(' expr ')' statement
  120               | "if" '(' error ')' statement
  121               | "if" '(' expr ')' statement "else" statement
  122               | "if" '(' error ')' statement "else" statement

  123 _for_init_stmt: expr_stmt
  124               | assign_stmt
  125               | decl_stmt

  126 _for_inc_stmt: /* empty */
  127              | expr
  128              | assignment

  129 iteration_stmt: "for" '(' _for_init_stmt expr_stmt _for_inc_stmt ')' statement
  130               | "while" '(' expr ')' statement
  131               | "while" '(' error ')' statement
  132               | "do" statement "while" '(' expr ')' ';'
  133               | "do" statement "while" '(' error ')' ';'

  134 jump_stmt: "break" ';'
  135          | "return" expr ';'
  136          | "return" ';'

  137 assign_op: '='
  138          | "+="
  139          | "-="
  140          | "*="
  141          | "/="

  142 assignment: unary_expr assign_op initializer

  143 assign_stmt: assignment ';'

  144 expr_stmt: ';'
  145          | expr ';'

  146 ani_stmt: '%' ani_block ';'
  147         | '%' cond_expr ani_block ';'
  148         | '%' name ':' ani_block ';'
  149         | '%' name ':' cond_expr ani_block ';'

  150 statement: expr_stmt
  151          | assign_stmt
  152          | decl_stmt
  153          | compound_stmt
  154          | selection_stmt
  155          | iteration_stmt
  156          | jump_stmt
  157          | ani_stmt
  158          | error ';'

  159 statement_list_ne: statement
  160                  | statement_list_ne statement

  161 statement_list: /* empty */
  162               | statement_list_ne

  163 fdef_decl_list_ent: type_name declarator

  164 fdef_decl_list_ne: fdef_decl_list_ent
  165                  | fdef_decl_list_ne ',' fdef_decl_list_ent
  166                  | error ',' fdef_decl_list_ent
  167                  | fdef_decl_list_ne ',' error ',' fdef_decl_list_ent

  168 fdef_decl_list: /* empty */
  169               | fdef_decl_list_ne

  170 function_mod: /* empty */
  171             | "const"

  172 function_def_nonstatic: name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  173                       | type_name name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  174                       | type_name array_spec name_notabs '(' fdef_decl_list ')' function_mod compound_stmt

  175 function_def: function_def_nonstatic
  176             | "static" function_def_nonstatic

  177 obj_function_def: function_def
  178                 | "method" function_def
  179                 | '~' name_notabs '(' ')' compound_stmt

  180 object_body_ent: obj_function_def
  181                | decl_stmt

  182 object_body_ne: object_body_ent
  183               | object_body_ne object_body_ent

  184 object_body: /* empty */
  185            | object_body_ne

  186 object_def: "object" name '{' object_body '}'
  187           | "object" name '{' error '}'

  188 setting_body_ent: function_def
  189                 | decl_stmt
  190                 | object_def

  191 setting_body_ne: setting_body_ent
  192                | setting_body_ne setting_body_ent

  193 setting_body: /* empty */
  194             | setting_body_ne

  195 setting_def: "setting" name '{' setting_body '}'
  196            | "setting" name '{' error '}'

  197 animation_def: "animation" name compound_stmt

  198 typed_scope: identifier '{' typed_scope_list '}'
  199            | identifier name '{' typed_scope_list '}'
  200            | identifier '{' error '}'
  201            | identifier name '{' error '}'

  202 typed_scope_expr: typed_scope

  203 typed_scope_ent: typed_scope_expr
  204                | name '=' typed_scope_expr
  205                | expr ';'
  206                | name '=' expr ';'

  207 typed_scope_list_ne: typed_scope_ent
  208                    | typed_scope_list_ne typed_scope_ent

  209 typed_scope_list: /* empty */
  210                 | typed_scope_list_ne

  211 ani_block: '{' typed_scope_list '}'
  212          | '{' error '}'

  213 top_node: setting_def
  214         | object_def
  215         | function_def
  216         | decl_stmt
  217         | animation_def

  218 top_node_list_ne: top_node
  219                 | top_node_list_ne top_node
  220                 | top_node_list_ne error top_node

  221 top_node_list: /* empty */
  222              | top_node_list_ne

  223 animation: top_node_list

  224 pov_exprlist: /* empty */
  225             | pov_exprlist_ne

  226 pov_exprlist_ne: pov_expr
  227                | pov_exprlist_ne ',' pov_expr
  228                | error ',' pov_expr
  229                | pov_exprlist_ne ',' error ',' pov_expr

  230 @1: /* empty */

  231 pov_expr: @1 expr

  232 pov_assignment_list: /* empty */
  233                    | pov_assignment_list_ne

  234 pov_assignment_list_ne: pov_assignment_list_ent
  235                       | pov_assignment_list_ne ',' pov_assignment_list_ent
  236                       | error ',' pov_assignment_list_ent
  237                       | pov_assignment_list_ne ',' error ',' pov_assignment_list_ent

  238 pov_assignment_list_ent: name '=' pov_expr

  239 pov_object_entry: "macro" '=' name
  240                 | "declare" '=' name
  241                 | "params" '=' '{' pov_exprlist '}'
  242                 | "defs" '=' '{' pov_assignment_list '}'
  243                 | "include" '=' '{' pov_exprlist '}'
  244                 | "type" '=' pov_expr
  245                 | "append_raw" '=' pov_expr

  246 pov_object_entry_list: pov_object_entry
  247                      | pov_object_entry_list ',' pov_object_entry
  248                      | error ',' pov_object_entry
  249                      | pov_object_entry_list ',' error ',' pov_object_entry

  250 pov_entry: '@' "@object" '(' pov_object_entry_list ')'
  251          | '@' "@fileID" '=' name

  252 pov_entry_list: /* empty */
  253               | pov_entry_list_ne
  254               | error

  255 pov_entry_list_ne: pov_entry
  256                  | pov_entry_list_ne pov_entry
  257                  | error pov_entry
  258                  | pov_entry_list_ne error pov_entry

  259 STARTEXPR: TSS_ANIMATON animation
  260          | TSS_EXPR expr
  261          | TSS_POV_ENTRY pov_entry_list


Terminals, with rules where they appear

$end (0) 0
'!' (33) 39
'%' (37) 55 146 147 148 149
'(' (40) 23 28 29 30 48 59 119 120 121 122 129 130 131 132 133 172
    173 174 179 250
')' (41) 23 28 29 30 48 59 119 120 121 122 129 130 131 132 133 172
    173 174 179 250
'*' (42) 53
'+' (43) 37 56
',' (44) 13 14 15 76 77 78 82 83 84 93 110 111 112 165 166 167 227
    228 229 235 236 237 247 248 249
'-' (45) 38 57
'.' (46) 17 31 32
'/' (47) 54
':' (58) 68 69 148 149
';' (59) 113 114 132 133 134 135 136 143 144 145 146 147 148 149 158
    205 206
'<' (60) 11 58 91 93
'=' (61) 80 108 137 204 206 238 239 240 241 242 243 244 245 251
'>' (62) 11 59 91 93
'?' (63) 68 69
'@' (64) 250 251
'[' (91) 26 27 40 42 43 98 104 105 106
']' (93) 26 27 40 42 43 98 104 105 106
'^' (94) 52
'{' (123) 16 17 102 117 118 186 187 195 196 198 199 200 201 211 212
    241 242 243
'}' (125) 16 17 102 117 118 186 187 195 196 198 199 200 201 211 212
    241 242 243
'~' (126) 179
error (256) 27 29 43 77 78 83 84 105 111 112 118 120 122 131 133 158
    166 167 187 196 200 201 212 220 228 229 236 237 248 249 254 257
    258
TSS_ANIMATON (258) 259
TSS_EXPR (259) 260
TSS_POV_ENTRY (260) 261
"[integer]" (261) 1
"[scalar]" (262) 2
"[string]" (263) 3
"[identifier]" (264) 4
"new" (265) 48 49
"delete" (266) 50
"if" (267) 119 120 121 122
"else" (268) 121 122
"for" (269) 129
"do" (270) 132 133
"while" (271) 130 131 132 133
"break" (272) 134
"return" (273) 135 136
"const" (274) 114 171
"static" (275) 116 176
"int" (276) 87
"scalar" (277) 88
"range" (278) 89
"vector" (279) 90 91
"matrix" (280) 92 93
"string" (281) 94
"anyobj" (282) 97
"object" (283) 186 187
"method" (284) 178
"setting" (285) 195 196
"animation" (286) 197
"this" (287) 9
"NULL" (288) 24
"++" (289) 35 45
"--" (290) 36 46
"->" (291) 33 34
"::" (292) 6 8
"+=" (293) 138
"-=" (294) 139
"*=" (295) 140
"/=" (296) 141
".." (297) 71 72 73
"||" (298) 66
"&&" (299) 65
"==" (300) 63
"!=" (301) 64
"<=" (302) 61
">=" (303) 62
"> " (304) 60
"@object" (305) 250
"params" (306) 241
"defs" (307) 242
"macro" (308) 239
"declare" (309) 240
"include" (310) 243
"type" (311) 244
"append_raw" (312) 245
"@fileID" (313) 251


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
literal (83)
    on left: 1 2 3, on right: 18
identifier (84)
    on left: 4, on right: 5 6 198 199 200 201
name_notabs (85)
    on left: 5 6, on right: 7 8 103 172 173 174 179
name (86)
    on left: 7 8, on right: 6 21 31 33 48 80 96 148 149 186 187 195
    196 197 199 201 204 206 238 239 240 251
builtin_name_raw (87)
    on left: 9, on right: 10
builtin_name (88)
    on left: 10, on right: 22 32 34
vector (89)
    on left: 11, on right: 19
array_expr_list (90)
    on left: 12 13 14 15, on right: 16
array (91)
    on left: 16 17, on right: 20
primary_expr (92)
    on left: 18 19 20 21 22 23 24, on right: 25
postfix_expr (93)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36, on right: 26 27 28
    29 31 32 33 34 35 36 44
unary_op (94)
    on left: 37 38 39, on right: 47
new_array_spec (95)
    on left: 40 41 42 43, on right: 41 42 43 49
unary_expr (96)
    on left: 44 45 46 47 48 49 50, on right: 45 46 47 50 51 142
binary_expr (97)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66,
    on right: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
cond_expr (98)
    on left: 67 68 69, on right: 68 69 70 71 72 73 147 149
range_expr (99)
    on left: 70 71 72 73, on right: 74
expr (100)
    on left: 74, on right: 23 26 30 40 42 68 75 76 77 78 83 91 93 101
    104 119 121 127 130 132 135 145 205 206 231 260
expr_list_ne (101)
    on left: 75 76 77 78, on right: 11 12 13 14 15 76 78
fcall_expr_list_ent (102)
    on left: 79 80, on right: 81 82 84
fcall_expr_list_ne (103)
    on left: 81 82 83 84, on right: 82 84 86
fcall_expr_list (104)
    on left: 85 86, on right: 28 48
pod_type_name (105)
    on left: 87 88 89 90 91 92 93 94, on right: 30 95
type_name (106)
    on left: 95 96 97, on right: 40 113 114 163 173 174
bracket_bracket (107)
    on left: 98, on right: 41 99 100
array_spec (108)
    on left: 99 100, on right: 100 174
initializer (109)
    on left: 101 102, on right: 79 80 108 142
declarator_noinit (110)
    on left: 103 104 105 106, on right: 104 105 106 107 108
declarator (111)
    on left: 107 108, on right: 109 110 111 112 163
declarator_list_ne (112)
    on left: 109 110 111 112, on right: 110 112 113 114
decl_stmt_nonstatic (113)
    on left: 113 114, on right: 115 116
decl_stmt (114)
    on left: 115 116, on right: 125 152 181 189 216
compound_stmt (115)
    on left: 117 118, on right: 153 172 173 174 179 197
selection_stmt (116)
    on left: 119 120 121 122, on right: 154
_for_init_stmt (117)
    on left: 123 124 125, on right: 129
_for_inc_stmt (118)
    on left: 126 127 128, on right: 129
iteration_stmt (119)
    on left: 129 130 131 132 133, on right: 155
jump_stmt (120)
    on left: 134 135 136, on right: 156
assign_op (121)
    on left: 137 138 139 140 141, on right: 142
assignment (122)
    on left: 142, on right: 128 143
assign_stmt (123)
    on left: 143, on right: 124 151
expr_stmt (124)
    on left: 144 145, on right: 123 129 150
ani_stmt (125)
    on left: 146 147 148 149, on right: 157
statement (126)
    on left: 150 151 152 153 154 155 156 157 158, on right: 119 120
    121 122 129 130 131 132 133 159 160
statement_list_ne (127)
    on left: 159 160, on right: 160 162
statement_list (128)
    on left: 161 162, on right: 117
fdef_decl_list_ent (129)
    on left: 163, on right: 164 165 166 167
fdef_decl_list_ne (130)
    on left: 164 165 166 167, on right: 165 167 169
fdef_decl_list (131)
    on left: 168 169, on right: 172 173 174
function_mod (132)
    on left: 170 171, on right: 172 173 174
function_def_nonstatic (133)
    on left: 172 173 174, on right: 175 176
function_def (134)
    on left: 175 176, on right: 177 178 188 215
obj_function_def (135)
    on left: 177 178 179, on right: 180
object_body_ent (136)
    on left: 180 181, on right: 182 183
object_body_ne (137)
    on left: 182 183, on right: 183 185
object_body (138)
    on left: 184 185, on right: 186
object_def (139)
    on left: 186 187, on right: 190 214
setting_body_ent (140)
    on left: 188 189 190, on right: 191 192
setting_body_ne (141)
    on left: 191 192, on right: 192 194
setting_body (142)
    on left: 193 194, on right: 195
setting_def (143)
    on left: 195 196, on right: 213
animation_def (144)
    on left: 197, on right: 217
typed_scope (145)
    on left: 198 199 200 201, on right: 202
typed_scope_expr (146)
    on left: 202, on right: 203 204
typed_scope_ent (147)
    on left: 203 204 205 206, on right: 207 208
typed_scope_list_ne (148)
    on left: 207 208, on right: 208 210
typed_scope_list (149)
    on left: 209 210, on right: 198 199 211
ani_block (150)
    on left: 211 212, on right: 146 147 148 149
top_node (151)
    on left: 213 214 215 216 217, on right: 218 219 220
top_node_list_ne (152)
    on left: 218 219 220, on right: 219 220 222
top_node_list (153)
    on left: 221 222, on right: 223
animation (154)
    on left: 223, on right: 259
pov_exprlist (155)
    on left: 224 225, on right: 241 243
pov_exprlist_ne (156)
    on left: 226 227 228 229, on right: 225 227 229
pov_expr (157)
    on left: 231, on right: 226 227 228 229 238 244 245
@1 (158)
    on left: 230, on right: 231
pov_assignment_list (159)
    on left: 232 233, on right: 242
pov_assignment_list_ne (160)
    on left: 234 235 236 237, on right: 233 235 237
pov_assignment_list_ent (161)
    on left: 238, on right: 234 235 236 237
pov_object_entry (162)
    on left: 239 240 241 242 243 244 245, on right: 246 247 248 249
pov_object_entry_list (163)
    on left: 246 247 248 249, on right: 247 249 250
pov_entry (164)
    on left: 250 251, on right: 255 256 257 258
pov_entry_list (165)
    on left: 252 253 254, on right: 261
pov_entry_list_ne (166)
    on left: 255 256 257 258, on right: 253 256 258
STARTEXPR (167)
    on left: 259 260 261, on right: 0


state 0

    0 $accept: . STARTEXPR $end
  259 STARTEXPR: . TSS_ANIMATON animation
  260          | . TSS_EXPR expr
  261          | . TSS_POV_ENTRY pov_entry_list

    TSS_ANIMATON   shift, and go to state 1
    TSS_EXPR       shift, and go to state 2
    TSS_POV_ENTRY  shift, and go to state 3

    STARTEXPR  go to state 4


state 1

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
   87 pod_type_name: . "int"
   88              | . "scalar"
   89              | . "range"
   90              | . "vector"
   91              | . "vector" '<' expr '>'
   92              | . "matrix"
   93              | . "matrix" '<' expr ',' expr '>'
   94              | . "string"
   95 type_name: . pod_type_name
   96          | . name
   97          | . "anyobj"
  113 decl_stmt_nonstatic: . type_name declarator_list_ne ';'
  114                    | . "const" type_name declarator_list_ne ';'
  115 decl_stmt: . decl_stmt_nonstatic
  116          | . "static" decl_stmt_nonstatic
  172 function_def_nonstatic: . name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  173                       | . type_name name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  174                       | . type_name array_spec name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  175 function_def: . function_def_nonstatic
  176             | . "static" function_def_nonstatic
  186 object_def: . "object" name '{' object_body '}'
  187           | . "object" name '{' error '}'
  195 setting_def: . "setting" name '{' setting_body '}'
  196            | . "setting" name '{' error '}'
  197 animation_def: . "animation" name compound_stmt
  213 top_node: . setting_def
  214         | . object_def
  215         | . function_def
  216         | . decl_stmt
  217         | . animation_def
  218 top_node_list_ne: . top_node
  219                 | . top_node_list_ne top_node
  220                 | . top_node_list_ne error top_node
  221 top_node_list: .  [$end]
  222              | . top_node_list_ne
  223 animation: . top_node_list
  259 STARTEXPR: TSS_ANIMATON . animation

    "[identifier]"  shift, and go to state 5
    "const"         shift, and go to state 6
    "static"        shift, and go to state 7
    "int"           shift, and go to state 8
    "scalar"        shift, and go to state 9
    "range"         shift, and go to state 10
    "vector"        shift, and go to state 11
    "matrix"        shift, and go to state 12
    "string"        shift, and go to state 13
    "anyobj"        shift, and go to state 14
    "object"        shift, and go to state 15
    "setting"       shift, and go to state 16
    "animation"     shift, and go to state 17
    "::"            shift, and go to state 18

    $default  reduce using rule 221 (top_node_list)

    identifier              go to state 19
    name_notabs             go to state 20
    name                    go to state 21
    pod_type_name           go to state 22
    type_name               go to state 23
    decl_stmt_nonstatic     go to state 24
    decl_stmt               go to state 25
    function_def_nonstatic  go to state 26
    function_def            go to state 27
    object_def              go to state 28
    setting_def             go to state 29
    animation_def           go to state 30
    top_node                go to state 31
    top_node_list_ne        go to state 32
    top_node_list           go to state 33
    animation               go to state 34


state 2

    1 literal: . "[integer]"
    2        | . "[scalar]"
    3        | . "[string]"
    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
    9 builtin_name_raw: . "this"
   10 builtin_name: . builtin_name_raw
   11 vector: . '<' expr_list_ne '>'
   16 array: . '{' array_expr_list '}'
   17      | . '{' '.' '}'
   18 primary_expr: . literal
   19             | . vector
   20             | . array
   21             | . name
   22             | . builtin_name
   23             | . '(' expr ')'
   24             | . "NULL"
   25 postfix_expr: . primary_expr
   26             | . postfix_expr '[' expr ']'
   27             | . postfix_expr '[' error ']'
   28             | . postfix_expr '(' fcall_expr_list ')'
   29             | . postfix_expr '(' error ')'
   30             | . pod_type_name '(' expr ')'
   31             | . postfix_expr '.' name
   32             | . postfix_expr '.' builtin_name
   33             | . postfix_expr "->" name
   34             | . postfix_expr "->" builtin_name
   35             | . postfix_expr "++"
   36             | . postfix_expr "--"
   37 unary_op: . '+'
   38         | . '-'
   39         | . '!'
   44 unary_expr: . postfix_expr
   45           | . "++" unary_expr
   46           | . "--" unary_expr
   47           | . unary_op unary_expr
   48           | . "new" name '(' fcall_expr_list ')'
   49           | . "new" new_array_spec
   50           | . "delete" unary_expr
   51 binary_expr: . unary_expr
   52            | . binary_expr '^' binary_expr
   53            | . binary_expr '*' binary_expr
   54            | . binary_expr '/' binary_expr
   55            | . binary_expr '%' binary_expr
   56            | . binary_expr '+' binary_expr
   57            | . binary_expr '-' binary_expr
   58            | . binary_expr '<' binary_expr
   59            | . '(' binary_expr '>' binary_expr ')'
   60            | . binary_expr "> " binary_expr
   61            | . binary_expr "<=" binary_expr
   62            | . binary_expr ">=" binary_expr
   63            | . binary_expr "==" binary_expr
   64            | . binary_expr "!=" binary_expr
   65            | . binary_expr "&&" binary_expr
   66            | . binary_expr "||" binary_expr
   67 cond_expr: . binary_expr
   68          | . binary_expr '?' expr ':' cond_expr
   69          | . binary_expr '?' ':' cond_expr
   70 range_expr: . cond_expr
   71           | . cond_expr ".." cond_expr
   72           | . ".." cond_expr
   73           | . cond_expr ".."
   74 expr: . range_expr
   87 pod_type_name: . "int"
   88              | . "scalar"
   89              | . "range"
   90              | . "vector"
   91              | . "vector" '<' expr '>'
   92              | . "matrix"
   93              | . "matrix" '<' expr ',' expr '>'
   94              | . "string"
  260 STARTEXPR: TSS_EXPR . expr

    "[integer]"     shift, and go to state 35
    "[scalar]"      shift, and go to state 36
    "[string]"      shift, and go to state 37
    "[identifier]"  shift, and go to state 5
    "new"           shift, and go to state 38
    "delete"        shift, and go to state 39
    "int"           shift, and go to state 8
    "scalar"        shift, and go to state 9
    "range"         shift, and go to state 10
    "vector"        shift, and go to state 11
    "matrix"        shift, and go to state 12
    "string"        shift, and go to state 13
    "this"          shift, and go to state 40
    "NULL"          shift, and go to state 41
    "++"            shift, and go to state 42
    "--"            shift, and go to state 43
    "::"            shift, and go to state 18
    ".."            shift, and go to state 44
    '<'             shift, and go to state 45
    '+'             shift, and go to state 46
    '-'             shift, and go to state 47
    '{'             shift, and go to state 48
    '('             shift, and go to state 49
    '!'             shift, and go to state 50

    literal           go to state 51
    identifier        go to state 19
    name_notabs       go to state 52
    name              go to state 53
    builtin_name_raw  go to state 54
    builtin_name      go to state 55
    vector            go to state 56
    array             go to state 57
    primary_expr      go to state 58
    postfix_expr      go to state 59
    unary_op          go to state 60
    unary_expr        go to state 61
    binary_expr       go to state 62
    cond_expr         go to state 63
    range_expr        go to state 64
    expr              go to state 65
    pod_type_name     go to state 66


state 3

  250 pov_entry: . '@' "@object" '(' pov_object_entry_list ')'
  251          | . '@' "@fileID" '=' name
  252 pov_entry_list: .  [$end]
  253               | . pov_entry_list_ne
  254               | . error
  255 pov_entry_list_ne: . pov_entry
  256                  | . pov_entry_list_ne pov_entry
  257                  | . error pov_entry
  258                  | . pov_entry_list_ne error pov_entry
  261 STARTEXPR: TSS_POV_ENTRY . pov_entry_list

    error  shift, and go to state 67
    '@'    shift, and go to state 68

    $end  reduce using rule 252 (pov_entry_list)

    pov_entry          go to state 69
    pov_entry_list     go to state 70
    pov_entry_list_ne  go to state 71


state 4

    0 $accept: STARTEXPR . $end

    $end  shift, and go to state 72


state 5

    4 identifier: "[identifier]" .

    $default  reduce using rule 4 (identifier)


state 6

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
   87 pod_type_name: . "int"
   88              | . "scalar"
   89              | . "range"
   90              | . "vector"
   91              | . "vector" '<' expr '>'
   92              | . "matrix"
   93              | . "matrix" '<' expr ',' expr '>'
   94              | . "string"
   95 type_name: . pod_type_name
   96          | . name
   97          | . "anyobj"
  114 decl_stmt_nonstatic: "const" . type_name declarator_list_ne ';'

    "[identifier]"  shift, and go to state 5
    "int"           shift, and go to state 8
    "scalar"        shift, and go to state 9
    "range"         shift, and go to state 10
    "vector"        shift, and go to state 11
    "matrix"        shift, and go to state 12
    "string"        shift, and go to state 13
    "anyobj"        shift, and go to state 14
    "::"            shift, and go to state 18

    identifier     go to state 19
    name_notabs    go to state 52
    name           go to state 21
    pod_type_name  go to state 22
    type_name      go to state 73


state 7

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
   87 pod_type_name: . "int"
   88              | . "scalar"
   89              | . "range"
   90              | . "vector"
   91              | . "vector" '<' expr '>'
   92              | . "matrix"
   93              | . "matrix" '<' expr ',' expr '>'
   94              | . "string"
   95 type_name: . pod_type_name
   96          | . name
   97          | . "anyobj"
  113 decl_stmt_nonstatic: . type_name declarator_list_ne ';'
  114                    | . "const" type_name declarator_list_ne ';'
  116 decl_stmt: "static" . decl_stmt_nonstatic
  172 function_def_nonstatic: . name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  173                       | . type_name name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  174                       | . type_name array_spec name_notabs '(' fdef_decl_list ')' function_mod compound_stmt
  176 function_def: "static" . function_def_nonstatic

    "[identifier]"  shift, and go to state 5
    "const"         shift, and go to state 6
    "int"           shift, and go to state 8
    "scalar"        shift, and go to state 9
    "range"         shift, and go to state 10
    "vector"        shift, and go to state 11
    "matrix"        shift, and go to state 12
    "string"        shift, and go to state 13
    "anyobj"        shift, and go to state 14
    "::"            shift, and go to state 18

    identifier              go to state 19
    name_notabs             go to state 20
    name                    go to state 21
    pod_type_name           go to state 22
    type_name               go to state 23
    decl_stmt_nonstatic     go to state 74
    function_def_nonstatic  go to state 75


state 8

   87 pod_type_name: "int" .

    $default  reduce using rule 87 (pod_type_name)


state 9

   88 pod_type_name: "scalar" .

    $default  reduce using rule 88 (pod_type_name)


state 10

   89 pod_type_name: "range" .

    $default  reduce using rule 89 (pod_type_name)


state 11

   90 pod_type_name: "vector" .  [error, "[identifier]", '(', '[']
   91              | "vector" . '<' expr '>'

    '<'  shift, and go to state 76

    $default  reduce using rule 90 (pod_type_name)


state 12

   92 pod_type_name: "matrix" .  [error, "[identifier]", '(', '[']
   93              | "matrix" . '<' expr ',' expr '>'

    '<'  shift, and go to state 77

    $default  reduce using rule 92 (pod_type_name)


state 13

   94 pod_type_name: "string" .

    $default  reduce using rule 94 (pod_type_name)


state 14

   97 type_name: "anyobj" .

    $default  reduce using rule 97 (type_name)


state 15

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
  186 object_def: "object" . name '{' object_body '}'
  187           | "object" . name '{' error '}'

    "[identifier]"  shift, and go to state 5
    "::"            shift, and go to state 18

    identifier   go to state 19
    name_notabs  go to state 52
    name         go to state 78


state 16

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
  195 setting_def: "setting" . name '{' setting_body '}'
  196            | "setting" . name '{' error '}'

    "[identifier]"  shift, and go to state 5
    "::"            shift, and go to state 18

    identifier   go to state 19
    name_notabs  go to state 52
    name         go to state 79


state 17

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    7 name: . name_notabs
    8     | . "::" name_notabs
  197 animation_def: "animation" . name compound_stmt

    "[identifier]"  shift, and go to state 5
    "::"            shift, and go to state 18

    identifier   go to state 19
    name_notabs  go to state 52
    name         go to state 80


state 18

    4 identifier: . "[identifier]"
    5 name_notabs: . identifier
    6            | . identifier "::" name
    8 name: "::" . name_notabs

    "[identifier]"  shift, and go to state 5

    identifier   go to state 19
    name_notabs  go to state 81


state 19

    5 name_notabs: identifier .  [$end, error, "[identifier]", "++", "--", "->", "+=", "-=", "*=", "/=", "..", "||", "&&", "==", "!=", "<=", ">=", "> ", '>', '?', ':', '<', '+', '-', '*', '/', '%', '^', '.', ',', '{', '}', '(', ')', '[', ']', '=', ';', '@']
    6            | identifier . "::" name

    "::"  shift, and go to state 82

    $default  reduce using rule 5 (name_notabs)


state 20

    7 name: name_notabs .  [error, "[identifier]", '[']
  172 function_def_nonstatic: name_notabs . '(' fdef_decl_list ')' function_mod compound_stmt

    '('  shift, and go to state 83

    $default  reduce using rule 7 (name)


state 21

   96 type_name: name .

    $default  reduce using rule 96 (type_name)


state 22

   95 type_name: pod_type_name .

    $default  reduce using rule 95 (type_name)


state 23
